--- a/app/partials/client.html
+++ b/app/partials/client.html
@@ -152,7 +152,7 @@
                                     <td class="notification-avatar"><img src="{{client.keyaccount.photo}}" class="img-circle mr5" alt="image"> {{client.keyaccount.name}}  {{client.keyaccount.surname}}</td>
                                     <td class="project-actions">
                                         <button type="button" class="btn btn-white btn-sm" ng-click="OpenCreateModal(client)"><i class="fa fa-pencil"></i> </button>
-                                        <a href="#/clientprojects?cid={{client.id}}" class="btn btn-white btn-sm"><i class="fa fa-search"></i> details</a>
+                                        <a href="#/clientprojects/{{client.id}}" class="btn btn-white btn-sm"><i class="fa fa-search"></i> details</a>
                                        
                                     </td> 
                                 </tr>
