--- a/app/partials/pdetails.html
+++ b/app/partials/pdetails.html
@@ -340,7 +340,12 @@
                                                            <span class="label label-default label-nobg"><img src="img/ellipsis.gif" width="15" height="15"> in acceptance</span>
                                                         
                                                         </td>
-                                                        <td class="project-status" ng-if="ticket.status==ticketStatus.Done.status">
+                                                        <td class="project-status" ng-if="ticket.status==ticketStatus.Done.status && isAdmin">
+                                                            <span class="label label-default label-nobg" ng-if="ticket.open"><i class="fa fa-check"></i> done / not billed</span>
+                                                            <span class="label label-default label-nobg" ng-if="ticket.billed && !ticket.payed"><i class="fa fa-check"></i> done / billed</span>
+                                                            <span class="label label-default label-nobg" ng-if="ticket.payed"><i class="fa fa-check"></i> done / payed</span> 
+                                                        </td>
+                                                        <td class="project-status" ng-if="ticket.status==ticketStatus.Done.status && isTeamLeader">
                                                             <span class="label label-default label-nobg"><i class="fa fa-check"></i> done</span>
                                                         </td>
                                                          <td class="project-status" ng-if="ticket.status==ticketStatus.Reject.status">
@@ -349,7 +354,10 @@
                                                         
                                                         </td>
                                                         <td class="project-actions">
+                                                            <a ng-if="isAdmin && ticket.status==ticketStatus.Done.status && ticket.open" ng-click="markAsBilled(ticket)" class="btn btn-white btn-sm">bill</a>
+                                                            <a ng-if="isAdmin && ticket.status==ticketStatus.Done.status && ticket.billed && !ticket.payed" ng-click="markAsPayed(ticket)" class="btn btn-white btn-sm">pay</a>
                                                             <a ng-click="openStoriesView(ticket)" class="btn btn-white btn-sm"><i class="fa fa-search"></i> details</a>
+                                                            
                                                         </td> 
                                                     </tr>
                                                     <tr ng-if="isMember" ng-repeat="ticket in tickets">
@@ -419,6 +427,11 @@
                                                            <span class="label label-default label-nobg"><img src="img/ellipsis.gif" width="15" height="15"> in acceptance</span>
                                                         
                                                         </td>
+                                                        <td class="project-status" ng-if="ticket.status==ticketStatus.Done.status && isKeyAccount">
+                                                            <span class="label label-default label-nobg" ng-if="ticket.open"><i class="fa fa-check"></i> done / not billed</span>
+                                                            <span class="label label-default label-nobg" ng-if="ticket.billed && !ticket.payed"><i class="fa fa-check"></i> done / billed</span>
+                                                            <span class="label label-default label-nobg" ng-if="ticket.payed"><i class="fa fa-check"></i> done / payed</span> 
+                                                        </td>
                                                         <td class="project-status" ng-if="ticket.status==ticketStatus.Done.status">
                                                             <span class="label label-default label-nobg"><i class="fa fa-check"></i> done</span>
                                                         </td>
@@ -428,6 +441,8 @@
                                                         
                                                         </td>
                                                         <td class="project-actions">
+                                                            <a ng-if="isKeyAccount && ticket.status==ticketStatus.Done.status && ticket.open" ng-click="markAsBilled(ticket)" class="btn btn-white btn-sm">bill</a>
+                                                            <a ng-if="isKeyAccount && ticket.status==ticketStatus.Done.status && ticket.billed && !ticket.payed" ng-click="markAsPayed(ticket)" class="btn btn-white btn-sm">pay</a>
                                                             <a ng-click="openStoriesView(ticket)" class="btn btn-white btn-sm"><i class="fa fa-search"></i> details</a>
                                                         </td> 
                                                     </tr>
